--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "copy-roblox-game",
   "version": "1.0.0",
+  "description": "Backend proxy to forward pasted text to Discord webhook",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7"
-  }
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "license": "MIT"
 }
