--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "copy-roblox-game",
   "version": "1.0.0",
+  "description": "Backend for Roblox game copy webhook proxy",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
@@ -10,5 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^2.6.12"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
