--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "copy-roblox-game",
   "version": "1.0.0",
-  "description": "Backend for Roblox game copy webhook proxy",
+  "description": "Backend proxy server for forwarding data to Discord webhook",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^2.6.12"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
